fix naming + z-indexing

--- a/res/macOSNotif.css
+++ b/res/macOSNotif.css
@@ -33,6 +33,7 @@
     -ms-user-select: none;
     -khtml-user-select: none;
     user-select: none;
+    transition: top .8s ease-in-out;
 }
 
 .macOSNotif_Container {
